--- a/package.json
+++ b/package.json
@@ -9,35 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/analytics": "^0.1.5",
-    "aws-sdk": "^2.1023.0",
-    "countapi-js": "^1.0.2",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
-    "next": "13.2.4",
+    "@types/next": "^9.0.0",
+    "@vercel/analytics": "^1.1.1",
+    "aws-sdk": "^2.1499.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "next": "^15.0.3",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
-    "react-live-clock": "^5.3.1",
-    "react-medium-image-zoom": "^4.3.5",
-    "react-moment": "^1.1.1",
-    "react-responsive": "^9.0.0-beta.4",
-    "react-text-transition": "^1.3.0",
-    "react-vertical-timeline-component": "^3.5.2",
-    "sharp": "^0.29.2"
+    "react-live-clock": "^6.1.16",
+    "react-medium-image-zoom": "^5.1.8",
+    "react-moment": "^1.1.3",
+    "react-responsive": "^9.0.2",
+    "react-text-transition": "^3.1.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.33",
-    "@types/react-custom-scrollbars": "^4.0.9",
-    "@types/react-scrollbar": "^0.5.3",
-    "@types/react-vertical-timeline-component": "^3.3.1",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.1",
-    "postcss": "^8.3.11",
-    "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "3.2.4",
-    "typescript": "4.4.4"
+    "@eslint/config-array": "^0.1.2",
+    "@eslint/object-schema": "^0.1.1",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-custom-scrollbars": "^4.0.11",
+    "@types/react-vertical-timeline-component": "^3.3.6",
+    "eslint": "^8.53.0",
+    "eslint-config-next": "^14.0.2",
+    "postcss": "^8.4.31",
+    "postcss-preset-env": "^9.3.0",
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.2.2"
   }
 }
