--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-live-clock": "^6.1.16",
-    "react-medium-image-zoom": "^5.1.8",
+    "react-medium-image-zoom": "^5.2.11",
     "react-moment": "^1.1.3",
-    "react-responsive": "^9.0.2",
+    "react-responsive": "^10.0.0",
     "react-text-transition": "^3.1.0",
     "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.32.6"
@@ -34,6 +34,7 @@
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-custom-scrollbars": "^4.0.11",
+    "@types/react-responsive": "^8.0.8",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^8.53.0",
     "eslint-config-next": "^14.0.2",
